--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,12 @@
 			<artifactId>dozer</artifactId>
 			<version>5.3.2</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.3</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
