--- a/.settings/de.loskutov.FileSync.prefs
+++ b/.settings/de.loskutov.FileSync.prefs
@@ -1,8 +1,8 @@
 WARNING=DO NOT MODIFY THIS FILE IF YOU DON'T UNDERSTAND
-defaultDestination=D\:/prog/tomcat7/webapps/lunch4you
+defaultDestination=C\:/home/ladi/java/apache-tomcat-6.0.35/webapps
 defaultVariables=
 eclipse.preferences.version=1
 includeTeamPrivateFiles=false
-map|0=src/main/webapp|,|,|,|,
-map|1=target/classes|D\:/prog/tomcat7/webapps/lunch4you/WEB-INF/classes|,|,|,
+map|0=src/main/webapp|C\:/home/ladi/java/apache-tomcat-6.0.35/webapps/lunch4you|,|,|,
+map|1=target/classes|C\:/home/ladi/java/apache-tomcat-6.0.35/webapps/lunch4you/WEB-INF/classes|,|,|,
 useCurrentDateForDestinationFiles=true
