--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,36 +15,21 @@
     
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath*:META-INF/spring/applicationContext*.xml</param-value>
+        <param-value>
+        	classpath*:META-INF/spring/applicationContext*.xml
+			/WEB-INF/spring/security-app-context.xml
+		</param-value>
     </context-param>
-    
-<!--     <filter> -->
-<!--         <filter-name>CharacterEncodingFilter</filter-name> -->
-<!--         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class> -->
-<!--         <init-param> -->
-<!--             <param-name>encoding</param-name> -->
-<!--             <param-value>UTF-8</param-value> -->
-<!--         </init-param> -->
-<!--         <init-param> -->
-<!--             <param-name>forceEncoding</param-name> -->
-<!--             <param-value>true</param-value> -->
-<!--         </init-param> -->
-<!--     </filter> -->
 
-<!--     <filter> -->
-<!--         <filter-name>HttpMethodFilter</filter-name> -->
-<!--         <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class> -->
-<!--     </filter> -->
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
 
-<!--     <filter-mapping> -->
-<!--         <filter-name>CharacterEncodingFilter</filter-name> -->
-<!--         <url-pattern>/*</url-pattern> -->
-<!--     </filter-mapping> -->
-
-<!--     <filter-mapping> -->
-<!--         <filter-name>HttpMethodFilter</filter-name> -->
-<!--         <url-pattern>/*</url-pattern> -->
-<!--     </filter-mapping> -->
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
     <!-- Creates the Spring Container shared by all Servlets and Filters -->
     <listener>
@@ -66,7 +51,7 @@
         <servlet-name>lunch4you</servlet-name>
         <url-pattern>*.json</url-pattern>
     </servlet-mapping>
-    
+
     <session-config>
         <session-timeout>10</session-timeout>
     </session-config>
