--- a/src/main/resources/META-INF/spring/mailing.properties
+++ b/src/main/resources/META-INF/spring/mailing.properties
@@ -1,6 +1,6 @@
 smtp.host=localhost
 
-email.from=noreply@lunch4you.com
+email.from=noreply@lunch4you.cz
 email.menu.subject=Lunch4you weekly menu
 email.confirmation.subject=Lunch4you order confirmation
 email.schedule=0 00 22 * * ?
