more properties created for emailing

--- a/src/main/resources/META-INF/spring/application.properties
+++ b/src/main/resources/META-INF/spring/application.properties
@@ -1,1 +1,4 @@
-shop.url=http://localhost:8080/lunch4you/shop.html
+#appBase.url=http://localhost:8080/lunch4you
+appBase.url=http://www.lunch4you.cz/lunch4you
+contact.url=contact.html
+shop.url=shop.html
