Mainly Referral logic added

--- a/src/main/resources/META-INF/spring/mailing.properties
+++ b/src/main/resources/META-INF/spring/mailing.properties
@@ -1,6 +1,8 @@
 smtp.host=localhost
 
+email.backoffice.address=lunch4you.cz@gmail.com
 email.from=noreply@lunch4you.cz
 email.menu.subject=Lunch4you weekly menu
 email.confirmation.subject=Lunch4you order confirmation
+email.referral.subject=Lunch4you service recommended by your friend
 email.schedule=0 00 22 * * ?
