Contact information added to emailing

--- a/src/main/resources/META-INF/spring/mailing.properties
+++ b/src/main/resources/META-INF/spring/mailing.properties
@@ -1,6 +1,7 @@
 smtp.host=localhost
 
 email.backoffice.address=lunch4you.cz@gmail.com
+email.contactDetails=Lunch4you.cz@gmail.com, mobile: +420 774096313
 email.from=noreply@lunch4you.cz
 email.menu.subject=Lunch4you weekly menu
 email.confirmation.subject=Lunch4you order confirmation
