UTF encoding enforced between JVM and DB

--- a/src/main/resources/META-INF/spring/database.properties
+++ b/src/main/resources/META-INF/spring/database.properties
@@ -1,6 +1,6 @@
 #Updated at Sat Feb 18 22:28:57 CET 2012
 #Sat Feb 18 22:28:57 CET 2012
 database.password=lunch4you
-database.url=jdbc\:mysql\://localhost\:3306/lunch4you
+database.url=jdbc\:mysql\://localhost\:3306/lunch4you?useUnicode=true&characterEncoding=UTF-8
 database.username=lunch4you
 database.driverClassName=com.mysql.jdbc.Driver
