--- a/src/main/resources/META-INF/spring/mailing.properties
+++ b/src/main/resources/META-INF/spring/mailing.properties
@@ -5,5 +5,6 @@ email.contactDetails=Lunch4you.cz@gmail.com, mobile: +420 774096313
 email.from=noreply@lunch4you.cz
 email.menu.subject=Lunch4you weekly menu
 email.confirmation.subject=Lunch4you order confirmation
+email.deliveryNotification.subject=Lunch4you order delivery notification
 email.referral.subject=Lunch4you service recommended by your friend
 email.schedule=0 00 22 * * ?
