veeela zmien, vacsinou registracia

--- a/src/main/resources/META-INF/spring/mailing.properties
+++ b/src/main/resources/META-INF/spring/mailing.properties
@@ -5,6 +5,7 @@ email.contactDetails=Lunch4you.cz@gmail.com, mobile: +420 774096313
 email.from=noreply@lunch4you.cz
 email.menu.subject=Lunch4you weekly menu
 email.registration.subject=Lunch4you registration
+email.signin.subject=Lunch4you Sign-In code
 email.confirmation.subject=Lunch4you order confirmation
 email.deliveryNotification.subject=Lunch4you order delivery notification
 email.referral.subject=Lunch4you service recommended by your friend
